--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -10,8 +10,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/CSS/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/CSS/font-awesome.min.css">
-    <link rel="stylesheet" href="CSS/bootstrap-social.css">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/bootstrap-social.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <title>Andreia Domingues</title>
 </head>
 
@@ -24,7 +24,7 @@
             <a class="navbar-brand" href="#"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="../index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
             </div>
